# Scenne-illumination-estimation-from-single-image

./: LICENSE  README.md
GLEngine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GLEngine.sln  GLEngine.vcxproj  GLEngine.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  environment.hdr  para.txt
GLEngine/api/assimp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Assimp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Readme.md  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  assimp-config-version.cmake  assimp.pc  cmake_install.cmake
GLEngine/api/assimp/contrib/zlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  zlib.pc  zlib.sln  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
GLEngine/api/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
GLEngine/api/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  glfw_config.h
GLEngine/api/imgui/: imgui_impl_glfw_gl3.cpp
GLEngine/resources/shaders/: 2.2.2.background.fs  3.1.3.shadow_mapping.fs  gBuffer.frag  gBuffer.vert  latlongToCube.frag  latlongToCube.vert
GLEngine/resources/shaders/lighting/: directional.frag  environment.frag  integrateIBL.frag  integrateIBL.vert  irradianceIBL.frag  irradianceIBL.vert  lightingBRDF.frag  point.frag  point.vert  prefilterIBL.frag  prefilterIBL.vert  simple.frag  simple.vert
GLEngine/resources/shaders/postprocess/: firstpass.frag  postprocess.vert  sao.vert  saoBlur.frag
GLEngine/resources/textures/hdr/: TexturesCom_NorwayForestA_PineForest_A_1K_hdri_sphere.hdr  environment.hdr  environment0.hdr  environment1.hdr  environment_EMY.hdr  environment_NK6.hdr  environmenthdr.hdr  output_N86.hdr
GLEngine/src/camera/: camera.cpp  camera.h
GLEngine/src/lighting/: light.cpp  light.h
GLEngine/src/mesh/: mesh.cpp  mesh.h  model.cpp  model.h
GLEngine/src/renderer/: main.cpp
GLEngine/src/resources/: filesystem.h  material.cpp  material.h  shader.cpp  shader.h  shape.cpp  shape.h  skybox.cpp  skybox.h  texture.cpp  texture.h
NeuralNetwork/: Digraph.gv  TexturesCom_HDRPanorama0036_highrise_square_1K_hdri_sphere.exr  TexturesCom_HDRPanorama0036_highrise_square_1K_hdri_sphere.hdr  TexturesCom_HDRPanorama003_palace_courtyard_1K_hdri_sphere.exr  TexturesCom_HDRPanorama003_palace_courtyard_1K_hdri_sphere.hdr  TexturesCom_HDRPanorama048_WhiteContainersC_1K_hdri_sphere.exr  TexturesCom_HDRPanorama048_WhiteContainersC_1K_hdri_sphere.hdr  TexturesCom_NorwayForestA_PineForest_A_1K_hdri_sphere.exr  Untitled-1.txt  Untitled-2.txt  cnn.xlsx  environment_N86.hdr  eval.py  exr2hdr.py  getdata.py  inference.py  loader.py  out.txt  output.exr  output.hdr  output_EMY.exr  output_EMY.hdr  output_N86.exr  output_NK6.exr  output_NK6.hdr  para.txt  train.py  visualize_net.py  write.py  工作簿1.xlsx  工作簿12.xlsx
NeuralNetwork/data/: Back.csv  Front.csv  origin.csv  test_B.csv  test_Back.csv  test_F.csv  test_Front.csv  test_list.csv  test_origin.csv  train_list.csv
ahPhysicalSky/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ahPhysicalSky.sln  ahPhysicalSky.vcxproj  ahPhysicalSky.vcxproj.filters  cmake_install.cmake
ahPhysicalSky/HosekSky/: ArHosekSkyModel.h
ahPhysicalSky/src/: Cal.cpp  Geometry.h  Main.cpp  Main.h  Renderer.cpp  Renderer.h  ShaderUtils.h  SkyModel.cpp  SkyModel.h  tinyexr.h
